# quality-agents

./: .gitignore  Dockerfile  README.md  SYSTEM_QUALIFICATION_REPORT.md  VALIDATION_RUN_REPORT.md  api.py  docker-compose.yml  evaluator.py  gxp_jobs.db  gxp_tenants.db  main.py  pyproject.toml  run_validation_ci.py  skills-lock.json
.agents/skills/pydantic-ai-harness/: SKILL.md
.claude/skills/: logfire-instrumentation  logfire-query  logfire-ui  pydantic-ai-harness
.github/workflows/: validation-gate.yml
app/: __init__.py  agents.py  audit.py  config.py  database.py  document_processor.py  monitoring.py  observability.py  pipeline.py  schemas.py  test_harness.py  vector_store.py  vision_verifier.py
app/agents/: __init__.py  compliance_crawler.py  consensus.py  gap_analyzer_schemas.py  guardrails.py  patch_schemas.py  self_healing.py
app/auth/: tenant.py
app/crypto/: envelope.py
app/events/: broker.py  handlers.py
app/feedback/: injector.py  memory.py
app/integration/: connectors.py  veeva.py
app/ops/: api.py  cache.py  profiler.py  recovery.py  shadow.py
app/prompts/: registry.py  validation_drafting.md
app/qualification/: runner.py  specifications.py
app/queue/: tasks.py  worker.py
app/reporting/: compiler.py  templates.py
app/security/: defense.py  red_team.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ValidationDashboard.tsx
tests/: __init__.py  test_csv_team.py
