[project]
name = "quality-agents"
version = "0.1.0"
description = "Multi-Agent system for Life Sciences CSV using Pydantic AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-ai>=2.9.1",
    "pypdf>=6.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
